# plato

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
Design_documents/: gui_design_document.md  limit_analysis_engine_design.md
crates/plato-api/: Cargo.toml
crates/plato-api/src/: builder.rs  lib.rs  loads.rs  model.rs  prelude.rs  run.rs  supports.rs  units.rs
crates/plato-cli/: Cargo.toml
crates/plato-cli/src/: main.rs
crates/plato-core/: Cargo.toml
crates/plato-core/src/: lib.rs
crates/plato-core/src/assembly/: dof_map.rs  global.rs  mod.rs  visualise.rs
crates/plato-core/src/criteria/: johansen.rs  mod.rs
crates/plato-core/src/element/: geometry.rs  mod.rs  plate.rs
crates/plato-core/src/problem/: builder.rs  mod.rs
crates/plato-core/src/result/: mod.rs
crates/plato-mesh/: Cargo.toml
crates/plato-mesh/examples/: mesh_svg.rs
crates/plato-mesh/src/: error.rs  lib.rs
crates/plato-mesh/src/export/: mod.rs
crates/plato-mesh/src/geometry/: edge_ref.rs  mod.rs  panel.rs  polygon.rs  shared_edge.rs
crates/plato-mesh/src/mesher/: mod.rs  spade.rs  trait.rs
crates/plato-mesh/src/model/: mod.rs
